	* NEWS, src/groupadd.c, man/groupadd.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupadd.c: Check atexit failures.
	* src/groupadd.c: Return E_SUCCESS instead of exit'ing at the end
	of main().
	* NEWS, src/groupadd.c, man/groupadd.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupmod.c: The index of long options is not used.
	* src/groupdel.c: Add process_flags().
	* src/groupdel.c, man/groupdel.8.xml: Add --help option.
	* NEWS, src/groupdel.c, man/groupdel.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupdel.c: Check atexit failures.
	* NEWS, src/pwconv.c, src/pwunconv.c, src/grpconv.c,
	src/grpunconv.c, man/pwconv.8.xml: Add --root option.
	* src/pwconv.c, src/pwunconv.c, src/grpconv.c, src/grpunconv.c:
	Add --help option.
	* src/pwconv.c, src/pwunconv.c, src/grpconv.c, src/grpunconv.c:
	Add process_flags() and usage().

2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/ja/Makefile.am, man/fr/Makefile.am, man/ru/Makefile.am,
	man/sv/Makefile.am, man/pl/Makefile.am, man/zh_CN/Makefile.am,
	man/it/Makefile.am, man/Makefile.am: Include man_nopam in
	EXTRA_DIST only when USE_PAM (they are already in man_MANS
	otherwise).

2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: Document that su -c does not providea controlling
	terminal.

2011-10-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Fix typo.
	* src/useradd.c: Likewise.
	* lib/nscd.c: Remove unused variable.
	* lib/prototypes.h, libmisc/cleanup.c, lib/spawn.c, src/chage.c:
	Add splint annotations.
	* src/sulogin.c (main): env is only used when USE_PAM is not set.

2011-10-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/LOGIN_STRING.xml: Fix typo.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes, libmisc/basename.c (Basename): Input is a