@@ -20,6 +20,7 @@ shadow-4.1.4.3 -> shadow-4.1.5					UNRELEASED
   * When the gshadow file exists but there are no gshadow entries, an entry
     is created if the password is changed and group requires a
     shadow entry.
+  * Add --root option.
 -chpasswd
   * PAM enabled versions: restore the -e option to allow restoring
     passwords without knowing those passwords. Restore together the -m
@@ -28,6 +29,7 @@ shadow-4.1.4.3 -> shadow-4.1.5					UNRELEASED
   * When the shadow file exists but there are no shadow entries, an entry
     is created if the password is changed and passwd requires a
     shadow entry.
+  * Add --root option.
 - faillog
   * The -l, -m, -r, -t options only act on the existing users, unless -a is
     specified.
